// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportBackupPhrase should render for import 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Import an Account
    </h1>
    <p
      class="info"
    >
      To import a Sporran account, you will need a pre-existing backup phrase consisting of 12-words
    </p>
    <form
      autocomplete="off"
    >
      <ol
        class="items"
      >
        <li
          class="item"
        >
          <input
            aria-label="1"
            class="input"
            name="0"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="2"
            class="input"
            name="1"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="3"
            class="input"
            name="2"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="4"
            class="input"
            name="3"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="5"
            class="input"
            name="4"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="6"
            class="input"
            name="5"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="7"
            class="input"
            name="6"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="8"
            class="input"
            name="7"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="9"
            class="input"
            name="8"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="10"
            class="input"
            name="9"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="11"
            class="input"
            name="10"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="12"
            class="input"
            name="11"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
      </ol>
      <button
        class="button"
        disabled=""
        type="submit"
      >
        Next Step
      </button>
      <p
        class="tooltip"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <span
          class="pointer"
          data-popper-arrow="true"
          style="position: absolute;"
        />
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </section>
</div>
`;

exports[`ImportBackupPhrase should render for reset 1`] = `
<div>
  <section
    class="container"
  >
    <h1
      class="heading"
    >
      Set a new password
    </h1>
    <p
      class="info"
    >
      In order to set a new password you have to re-enter your backup phrase
    </p>
    <form
      autocomplete="off"
    >
      <ol
        class="items"
      >
        <li
          class="item"
        >
          <input
            aria-label="1"
            class="input"
            name="0"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="2"
            class="input"
            name="1"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="3"
            class="input"
            name="2"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="4"
            class="input"
            name="3"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="5"
            class="input"
            name="4"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="6"
            class="input"
            name="5"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="7"
            class="input"
            name="6"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="8"
            class="input"
            name="7"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="9"
            class="input"
            name="8"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="10"
            class="input"
            name="9"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="11"
            class="input"
            name="10"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
        <li
          class="item"
        >
          <input
            aria-label="12"
            class="input"
            name="11"
            type="text"
          />
          <p
            class="tooltip"
            style="position: absolute; left: 0px; top: 0px;"
          >
            It looks like there's a typo in this word
            <span
              class="pointer"
              data-popper-arrow="true"
              style="position: absolute;"
            />
          </p>
        </li>
      </ol>
      <button
        class="button"
        disabled=""
        type="submit"
      >
        Next Step
      </button>
      <p
        class="tooltip"
        style="position: absolute; left: 0px; top: 0px;"
      >
        <span
          class="pointer"
          data-popper-arrow="true"
          style="position: absolute;"
        />
      </p>
    </form>
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
  </section>
</div>
`;
